# xlandsat

./: .flake8  .gitignore  AUTHORS.md  AUTHORSHIP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  demo.ipynb  environment.yml  maui.ipynb  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: general-issue.md  release-checklist.md
.github/workflows/: docs.yml  pypi.yml  style.yml  test.yml
data/: README.md
dev/: .buildinfo  changes.html  citing.html  compatibility.html  composites.html  equalize-histogram.html  genindex.html  index.html  indices.html  install.html  io.html  missing-values.html  objects.inv  overview.html  pansharpen.html  plot-overlay.html  py-modindex.html  references.html  search.html  searchindex.js  versions.html
dev/_modules/: index.html
dev/_modules/xlandsat/: _composite.html  _enhancement.html  _indices.html  _interpolation.html  _io.html  _leaflet.html  _pansharpen.html  _read.html  datasets.html
dev/_sources/: changes.rst.txt  compatibility.rst  composites.rst  equalize-histogram.rst.txt  index.rst  indices.rst  io.rst  missing-values.rst  overview.rst  plot-overlay.rst  references.rst
dev/api/: index.html
doc/: changes.rst  citing.rst  composites.rst  conf.py  equalize-histogram.rst  index.rst  indices.rst  install.rst  missing-values.rst  overview.rst  pansharpen.rst  plot-overlay.rst  versions.rst
doc/_static/: custom.css
doc/_templates/: layout.html
doc/api/: index.rst
env/: requirements-docs.txt  requirements-test.txt
v0.0.1/: .buildinfo  changes.html  citing.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  versions.html
v0.0.1/_modules/: index.html
v0.0.1/_sources/: citing.rst.txt  index.rst.txt  versions.rst.txt
v0.0.1/api/: index.html
v0.1.0/: .buildinfo  changes.html  citing.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  versions.html
v0.1.0/_modules/: index.html
v0.1.0/_sources/: versions.rst.txt
v0.1.0/api/: index.html
v0.2.0/: .buildinfo  changes.html  citing.html  compatibility.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  versions.html
v0.2.0/_modules/: index.html
v0.2.0/_sources/: index.rst.txt
v0.2.0/api/: index.html
v0.3.0/: .buildinfo  changes.html  citing.html  compatibility.html  composites.html  genindex.html  index.html  indices.html  install.html  objects.inv  overview.html  pansharpen.html  py-modindex.html  references.html  search.html  searchindex.js  versions.html
v0.3.0/_modules/: index.html
v0.3.0/_sources/: changes.rst.txt  index.rst.txt  install.rst.txt
v0.3.0/api/: index.html
v0.4.0/: .buildinfo  changes.html  citing.html  compatibility.html  composites.html  equalize-histogram.html  genindex.html  index.html  indices.html  install.html  io.html  missing-values.html  objects.inv  overview.html  pansharpen.html  plot-overlay.html  py-modindex.html  references.html  search.html  searchindex.js  versions.html
v0.4.0/_modules/: index.html
v0.4.0/_sources/: compatibility.rst.txt  index.rst.txt  versions.rst.txt
v0.4.0/api/: index.html
v0.5.0/: .buildinfo  changes.html  citing.html  compatibility.html  composites.html  equalize-histogram.html  genindex.html  index.html  indices.html  install.html  io.html  missing-values.html  objects.inv  overview.html  pansharpen.html  plot-overlay.html  py-modindex.html  references.html  search.html  searchindex.js  versions.html
v0.5.0/_modules/: index.html
v0.5.0/_sources/: equalize-histogram.rst  install.rst  plot-overlay.rst  versions.rst
v0.5.0/api/: index.html
xlandsat/: __init__.py  _composite.py  _enhancement.py  _indices.py  _interpolation.py  _io.py  _leaflet.py  _pansharpen.py  _plot.py  _read.py  _version.py  datasets.py
xlandsat/tests/: __init__.py  test_datasets.py  test_io.py  test_read.py
(+26 files in other folders)
