[metadata]
name = xlandsat
description = Load Landsat remote sensing images into xarray
long_description = file: README.md
long_description_content_type = text/markdown
author = Leonardo Uieda
author_email = leouieda@gmail.com
license = MIT License
license_files = LICENSE.txt
platform = any
keywords = xarray, remote-sensing, landsat
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
url = https://github.com/compgeolab/xlandsat
project_urls =
    Documentation = https://www.compgeolab.org/xlandsat
    Release Notes = https://github.com/compgeolab/xlandsat/releases
    Bug Tracker = https://github.com/compgeolab/xlandsat/issues
    Source Code = https://github.com/compgeolab/xlandsat

[options]
zip_safe = True
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.19
    xarray>=0.16
    scikit-image>=0.18
    imageio>=2.10.1

[flake8]
max-line-length = 88
max-doc-length = 79
ignore =
    # Too many leading '#' for block comment
    E266,
    # Line too long (82 > 79 characters)
    E501,
    # Do not use variables named 'I', 'O', or 'l'
    E741,
    # Line break before binary operator (conflicts with black)
    W503,
exclude =
    .git,
    __pycache__,
    .ipynb_checkpoints,
    doc/_build,
per-file-ignores =
    # disable unused-imports errors on __init__.py
    __init__.py: F401

# Configure flake8-rst-docstrings
# -------------------------------
# Add some roles used in our docstrings
rst-roles =
    class,
    func,
    mod,
    meth,
    ref,
# Ignore "Unknown target name" raised on citations
extend-ignore = RST306

# Configure flake8-functions
# --------------------------
# Allow a max of 10 arguments per function
max-parameters-amount = 10
